# usb-performance-panel-unified-driver

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  entry.c
control/: console_entry.c
control/mfc/: about_dialog.cpp  about_dialog.h  adjust_dialog.cpp  adjust_dialog.h  control_panel.cpp  control_panel.h  control_panel.rc  control_panel_dialog.cpp  control_panel_dialog.h  framework.h  resource.h  targetver.h
control/qt/: about_dialog.cpp  about_dialog.h  about_dialog.ui  adjust_dialog.cpp  adjust_dialog.h  adjust_dialog.ui  control_panel_dialog.cpp  control_panel_dialog.h  control_panel_dialog.ui  qt_entry.cpp
datasource/: collector.c
datasource/linux/: configurationreader.c
datasource/windows/: cpu.c  cpu_amd.c  eventtimer.c  gpu_nvidia.c  ram.c  registryreader.c
include/: common.h  datasource.h  entry.h  platform.h
platform/: UsbPerformancePanelUmdf2Template.inf  libusb.c  umdf.c  unix_generic_timer.c  windows_trace.h  winusb.c
